k8s/tripviewer/poiservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: web
spec:
  type: ExternalName
  externalName: poi-service.api.svc.cluster.local
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
