k8s/tripviewer/tripsservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips-service
  namespace: web
spec:
  type: ExternalName
  externalName: trips-service.api.svc.cluster.local
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
