k8s/tripviewer/userprofileservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
  namespace: web
spec:
  type: ExternalName
  externalName: userprofile-service.api.svc.cluster.local
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
